# routes/index.js
@@ -1,5 +1,20 @@
-const express = require('express');
-const router = express.Router();
+const router = require('express').Router();
+const passport = require('passport');
+router.use('/', require('./swagger'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function (req, res, next) {
+  req.logout(function (err) {
+    if (err) {
+      return next(err);
+    }
+    res.redirect('/');
+  });
+});
+//=================
+// const express = require('express');
+// const router = express.Router();
 
 router.use('/', require('./swagger'));
 // router.use('/contacts', require('./contacts'));
